Figured out how to parse messages and load audio tracks from it. Need to come up with an approach for random message selection