@@ -21,37 +21,43 @@ import org.springframework.stereotype.Component;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import static open.seth.springnativediscordbot.commands.constants.Constants.*;
 
 @Component
 @RequiredArgsConstructor
 public class ShuffleMusicRecommendationsRequest implements SlashCommand {
-    public static final String URL = "url";
+    private static final String URL = "url";
+    private static final String ERROR_MISSING_OPTION = "Provide a url as an option in your request";
+    private static final String COMMAND_OPTION_DESCRIPTION = "A URL to YouTube, Soundcloud, Vimeo, Bandcamp, and Twitch";
+
     private final AudioScheduler audioScheduler;
-    private final AudioPlayer audioPlayer;
     private final AudioPlayerManager audioPlayerManager;
-    private final AudioSendHandler audioSendingHandler;
+    private final ShuffleHelper shuffleHelper;
 
     @Override
     public void handleSlashCommand(SlashCommandInteractionEvent event) {
-        //TODO extract to constants
-        VoiceChannel musicRecsShuffleChannel = event.getGuild().getVoiceChannelsByName("Music Recs Shuffle", true).get(0);
-        OptionMapping option = event.getInteraction().getOption(URL);
-        if(null != option && StringUtils.isNotBlank(option.getAsString())){//TODO extract as method
-            String url = option.getAsString();
-            if(!event.getGuild().getAudioManager().isConnected()){
-                //TODO duplicated code. Extract to common
-                event.getGuild().getAudioManager().openAudioConnection(musicRecsShuffleChannel);
-                event.getGuild().getAudioManager().setSendingHandler(audioSendingHandler);
+        if(null!= event.getGuild()) {
+            shuffleHelper.acknowledgeCommand(event);
+            VoiceChannel musicRecsShuffleChannel = shuffleHelper.setupAudioForVoiceChannel(event);
+            OptionMapping option = event.getInteraction().getOption(URL);
+            if (isTrackURLProvided(option)) {
+                String url = option.getAsString();
+                audioPlayerManager.loadItem(url, new AudioLoadResultHandler(event, audioScheduler, musicRecsShuffleChannel, url));
+                event.getHook().sendMessage("Oooh that's a good one " + event.getInteraction().getUser().getName()).queue();
+            } else {
+                event.getChannel().sendMessage(ERROR_MISSING_OPTION).queue();
             }
-            audioPlayerManager.loadItem(url, new AudioLoadResultHandler(event, audioScheduler, musicRecsShuffleChannel, url));
-
-        } else{
-            //TODO give an error message
+        } else {
+            event.getChannel().sendMessage(ERROR_GUILD_FAILURE).queue();
         }
-
     }
+
+    private static boolean isTrackURLProvided(OptionMapping option) {
+        return null != option && StringUtils.isNotBlank(option.getAsString());
+    }
+
     @Override
     public String getSlashCommandName() {
         return MUSIC_RECS_SHUFFLE_CUSTOM_NAME;
@@ -64,7 +70,7 @@ public class ShuffleMusicRecommendationsRequest implements SlashCommand {
 
     @Override
     public Collection<? extends OptionData> getSlashCommandOptions() {
-        OptionData beanLevelData = new OptionData(OptionType.STRING, URL, "A URL to YouTube, Soundcloud, Vimeo, Bandcamp, and Twitch");
-        return Arrays.asList(beanLevelData);
+        OptionData requestCommandOptions = new OptionData(OptionType.STRING, URL, COMMAND_OPTION_DESCRIPTION);
+        return List.of(requestCommandOptions);
     }
 }
